--- a/bhoma/mobile/bhoma-mobile/bhoma_monthly_chw_survey.xhtml
+++ b/bhoma/mobile/bhoma-mobile/bhoma_monthly_chw_survey.xhtml
@@ -141,7 +141,7 @@
   </select>
   
   <select1 ref="any_network_problem">
-	<label>Have you have a problem submitting forms in the last month?</label>
+	<label>Have you had a problem submitting forms in the last month?</label>
 	<item><label>Yes</label><value>y</value></item>
 	<item><label>No</label><value>n</value></item>
   </select1>
