remove default repetition for dispensed meds

--- a/bhoma/xforms/bhoma_under_five.xhtml
+++ b/bhoma/xforms/bhoma_under_five.xhtml
@@ -98,7 +98,7 @@
           </prescribed>
           <dispensed_as_prescribed />
           <dispensed>
-            <med>
+            <med jr:template="">
               <drug_drill_down />
 			  <drug_choices_one />
 			  <drug_choices_two />
