--- a/bhoma/mobile/bhoma-mobile/bhoma_household_survey.xhtml
+++ b/bhoma/mobile/bhoma-mobile/bhoma_household_survey.xhtml
@@ -78,7 +78,7 @@
     <bind nodeset="any_pregnant/create_referral" relevant="../problems = 'y'" />
     <bind nodeset="any_pregnant/refer" calculate="../create_referral = 'y'" />
     <bind nodeset="any_sick/illness" required="true()" />
-	<bind nodeset="any_sick/danger_signs" required="true()" />
+	<bind nodeset="any_sick/danger_signs" required="true()" constraint="not(selected(., 'none') and count-selected(.) &gt; 1)" jr:constraintMsg="Cant select 'No Danger Signs' and another answer"/>
     <bind nodeset="any_sick/clinic_visit" required="true()" />	
 	<bind nodeset="any_sick/clinic_meds" relevant="../clinic_visit = 'y'" />
     <bind nodeset="any_sick/chw_treatment" required="true()" />	
