change 'pregnancy' repeat title to 'pregnant woman'

--- a/bhoma/mobile/bhoma-mobile/bhoma_household_survey.xhtml
+++ b/bhoma/mobile/bhoma-mobile/bhoma_household_survey.xhtml
@@ -105,7 +105,7 @@
   </input>
   
   <group>
-  <label>a Pregnancy</label>
+  <label>Pregnant Woman</label>
   <repeat nodeset='any_pregnant'>
 
 	  <select1 ref="clinic_visit">
@@ -139,7 +139,7 @@
   </group>
   
   <group>
-  <label>a Sick Person</label>
+  <label>Sick Person</label>
   <repeat nodeset='any_sick'>
 
 	  <select ref="illness">
